# zabob-houdini

./: .env.example.linux  .env.example.macos  .env.example.windows  .gitignore  .markdownlint.json  API.md  CHANGELOG.md  DEVELOPMENT.md  README.md  TODO.md  convert_remaining.py  pyproject.toml  release.sh
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
docs/: PYPI_SETUP.md
examples/: chain_demo.py  diamond_chain_demo.py  enhanced_typing_demo.py  hython_bridge_demo.py  parameterized_diamond_demo.py  simple_diamond_demo.py
src/zabob_houdini/: __init__.py  __main__.py  cli.py  core.py  houdini_bridge.py  houdini_config.py  houdini_functions.py  houdini_info.py  houdini_test_functions.py  houdini_versions.py  hython_bridge.py  main.py  package_installer.py  utils.py
stubs/: README.md  TYPE_SAFETY.md  hou.pyi
tests/: conftest.py  conftest.py.backup  test_chain.py  test_chain_positional_copy.py  test_core_caching.py  test_enhanced_copy.py  test_houdini_bridge.py  test_houdini_integration.py  test_hython_bridge.py  test_hython_integration.py  test_node_creation.py  test_simple.py
